--- a/credentials.json.sample
+++ b/credentials.json.sample
@@ -7,7 +7,6 @@
         "token_uri":"https://oauth2.googleapis.com/token",
         "auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs",
         "client_secret":"",
-        "redirect_uris":[""],
-        "javascript_origins":[""]
+        "redirect_uris":["http://localhost:3001/gmail/loginCallback"],
+        "javascript_origins":["http://localhost:3000"]
     }
-}
